[package]
name        = "generators"
version     = "0.4.0"
edition     = "2021"
license     = "MIT"
description = "A library to make writing generators straightforward."
keywords    = ["generators", "coroutines", "yield", "macros", "nightly"]
authors     = ["Andrew McLemore"]

[dependencies]
macros = { path = "macros" }
